==> pseverini84/micropython/ports/rp2/machine_pin.c <==
#include <stdio.h>
#include <string.h>
#include "py/runtime.h"
#include "py/mphal.h"
#include "shared/runtime/mpirq.h"
#include "modmachine.h"
#include "extmod/virtpin.h"
#include "hardware/irq.h"
#include "hardware/regs/intctrl.h"
#include "hardware/structs/iobank0.h"
#include "hardware/structs/padsbank0.h"
#include "hardware/structs/dma.h"
#include "hardware/dma.h"
#include "pio_adc_read.pio.h"
#define ADC_BASE_PIN 2
#define ADC_BUS_WIDTH 8
#define ADC_PIO_CLKDIV 1
#define ADC_SM 0
#define ADC_BLOCK_SIZE 1024
#define GPIO_MODE_IN (0)
#define GPIO_MODE_OUT (1)
#define GPIO_MODE_OPEN_DRAIN (2)
#define GPIO_MODE_ALT (3)
#define GPIO_PULL_UP (1)
#define GPIO_PULL_DOWN (2)
#define GPIO_IRQ_ALL (0xf)
#define GPIO_GET_FUNCSEL(id) ((iobank0_hw->io[(id)].ctrl & IO_BANK0_GPIO0_CTRL_FUNCSEL_BITS) >> IO_BANK0_GPIO0_CTRL_FUNCSEL_LSB)
#define GPIO_IS_OUT(id) (sio_hw->gpio_oe & (1 << (id)))
#define GPIO_IS_PULL_UP(id) (padsbank0_hw->io[(id)] & PADS_BANK0_GPIO0_PUE_BITS)
#define GPIO_IS_PULL_DOWN(id) (padsbank0_hw->io[(id)] & PADS_BANK0_GPIO0_PDE_BITS)
#define GPIO_IS_OPEN_DRAIN(id) (machine_pin_open_drain_mask & (1 << (id)))
#define MICROPY_HW_PIN_RESERVED(i) (0)
#include "lib/cyw43-driver/src/cyw43.h"
#define CYW43_PIN_NAME_PREFIX "WL_GPIO"
#define LED_PIN_NAME "LED"
#define MICROPY_HW_PIN_ENABLE_LED_PIN 1

STATIC void machine_pin_print(const mp_print_t *print, mp_obj_t self_in, mp_print_kind_t kind) {
    machine_pin_obj_t *self = self_in;
    uint funcsel = GPIO_GET_FUNCSEL(self->id);
    qstr mode_qst;
    if (!is_cyw43_pin(self)) {
        if (funcsel == GPIO_FUNC_SIO) {
            if (GPIO_IS_OPEN_DRAIN(self->id)) {
                mode_qst = MP_QSTR_OPEN_DRAIN;
            } else if (GPIO_IS_OUT(self->id)) {
                mode_qst = MP_QSTR_OUT;
            } else {
                mode_qst = MP_QSTR_IN;
            }
        } else {
            mode_qst = MP_QSTR_ALT;
        }
        mp_printf(print, "Pin(%u, mode=%q", self->id, mode_qst);
        bool pull_up = false;
        if (GPIO_IS_PULL_UP(self->id)) {
            mp_printf(print, ", pull=%q", MP_QSTR_PULL_UP);
            pull_up = true;
        }
        if (GPIO_IS_PULL_DOWN(self->id)) {
            if (pull_up) {
                mp_printf(print, "|%q", MP_QSTR_PULL_DOWN);
            } else {
                mp_printf(print, ", pull=%q", MP_QSTR_PULL_DOWN);
            }
        }
        if (funcsel != GPIO_FUNC_SIO) {
            mp_printf(print, ", alt=%u", funcsel);
        }
    } else {
        #if MICROPY_HW_PIN_CYW43_COUNT
        mode_qst = self->is_output ? MP_QSTR_OUT : MP_QSTR_IN;
        mp_printf(print, "Pin(%s%u, mode=%q", CYW43_PIN_NAME_PREFIX,  self->id, mode_qst);
        #endif
    }
    mp_printf(print, ")");
}

STATIC mp_obj_t machine_pin_obj_init_helper(const machine_pin_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {

    // parse args
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    // set initial value (do this before configuring mode/pull)
    if (args[ARG_value].u_obj != mp_const_none) {
        gpio_put(self->id, mp_obj_is_true(args[ARG_value].u_obj));
    }

    // configure mode
    if (args[ARG_mode].u_obj != mp_const_none) {
        mp_int_t mode = mp_obj_get_int(args[ARG_mode].u_obj);
        if (mode == GPIO_MODE_IN) {
            mp_hal_pin_input(self->id);
        } else if (mode == GPIO_MODE_OUT) {
            mp_hal_pin_output(self->id);
        } else if (mode == GPIO_MODE_OPEN_DRAIN) {
            mp_hal_pin_open_drain(self->id);
        } else {
            // Alternate function.
            gpio_set_function(self->id, args[ARG_alt].u_int);
            machine_pin_open_drain_mask &= ~(1 << self->id);
        }
    }

    // configure pull (unconditionally because None means no-pull)
    uint32_t pull = 0;
    if (args[ARG_pull].u_obj != mp_const_none) {
        pull = mp_obj_get_int(args[ARG_pull].u_obj);
    }
    gpio_set_pulls(self->id, pull & GPIO_PULL_UP, pull & GPIO_PULL_DOWN);
    return mp_const_none;
}

STATIC mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 0, 1, false);
    machine_pin_obj_t *self = self_in;
    if (n_args == 0) {
        // get pin
        if (!is_cyw43_pin(self)) {
            return MP_OBJ_NEW_SMALL_INT(gpio_get(self->id));
        }
        #if MICROPY_HW_PIN_CYW43_COUNT
        return MP_OBJ_NEW_SMALL_INT(get_cyw43_value(self));
        #endif
    } else {
        // set pin
        bool value = mp_obj_is_true(args[0]);
        if (!is_cyw43_pin(self)) {
            if (GPIO_IS_OPEN_DRAIN(self->id)) {
                MP_STATIC_ASSERT(GPIO_IN == 0 && GPIO_OUT == 1);
                gpio_set_dir(self->id, 1 - value);
            } else {
                gpio_put(self->id, value);
            }
            return mp_const_none;
        }
        #if MICROPY_HW_PIN_CYW43_COUNT
        update_cyw43_value(self, value);
        #endif
    }
    return mp_const_none;
}

STATIC mp_obj_t machine_pin_low(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    if (!is_cyw43_pin(self)) {
        if (GPIO_IS_OPEN_DRAIN(self->id)) {
            gpio_set_dir(self->id, GPIO_OUT);
        } else {
            gpio_clr_mask(1u << self->id);
        }
        return mp_const_none;
    }
    #if MICROPY_HW_PIN_CYW43_COUNT
    update_cyw43_value(self, 0);
    return mp_const_none;
    #endif
}

STATIC mp_obj_t machine_pin_high(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    if (!is_cyw43_pin(self)) {
        if (GPIO_IS_OPEN_DRAIN(self->id)) {
            gpio_set_dir(self->id, GPIO_IN);
        } else {
            gpio_set_mask(1u << self->id);
        }
        return mp_const_none;
    }
    #if MICROPY_HW_PIN_CYW43_COUNT
    update_cyw43_value(self, 1);
    return mp_const_none;
    #endif
}

STATIC mp_obj_t machine_pin_toggle(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    if (!is_cyw43_pin(self)) {
        if (GPIO_IS_OPEN_DRAIN(self->id)) {
            if (GPIO_IS_OUT(self->id)) {
                gpio_set_dir(self->id, GPIO_IN);
            } else {
                gpio_set_dir(self->id, GPIO_OUT);
            }
        } else {
            gpio_xor_mask(1u << self->id);
        }
        return mp_const_none;
    }
    #if MICROPY_HW_PIN_CYW43_COUNT
    update_cyw43_value(self, self->last_output_value ^ 1);
    return mp_const_none;
    #endif
}

STATIC mp_uint_t pin_ioctl(mp_obj_t self_in, mp_uint_t request, uintptr_t arg, int *errcode) {
    (void)errcode;
    machine_pin_obj_t *self = self_in;

    if (!is_cyw43_pin(self)) {
        switch (request) {
            case MP_PIN_READ: {
                return gpio_get(self->id);
            }
            case MP_PIN_WRITE: {
                gpio_put(self->id, arg);
                return 0;
            }
        }
        return -1;
    }

    #if MICROPY_HW_PIN_CYW43_COUNT
    switch (request) {
        case MP_PIN_READ: {
            return get_cyw43_value(self);
        }
        case MP_PIN_WRITE: {
            update_cyw43_value(self, arg);
            return 0;
        }
    }
    return -1;
    #endif
}
