==> dpgeorge/micropython/ports/ambiq-apollo/machine_pin.c <==
#include <stdio.h>
#include <string.h>
#include "py/runtime.h"
#include "py/mphal.h"
#include "shared/runtime/mpirq.h"
#include "modmachine.h"
#include "extmod/virtpin.h"
#include "pin.h"
#define GPIO_MODE_IN (0)
#define GPIO_MODE_OUT (1)
#define GPIO_MODE_OPEN_DRAIN (2)
#define GPIO_MODE_TRISTATE (3)
#define GPIO_MODE_ALT (4)
#define GPIO_IRQ_ALL (0xf)

STATIC void machine_pin_print(const mp_print_t *print, mp_obj_t self_in, mp_print_kind_t kind) {
    machine_pin_obj_t *self = self_in;
    am_hal_gpio_pincfg_t cfg;
    am_hal_gpio_pinconfig_get(self->id, &cfg);
    mp_printf(print, "Pin(%u", self->id);
    qstr mode_qst = MP_QSTRnull;
    if (cfg.GP.cfg_b.uFuncSel == 3) {
        if (cfg.GP.cfg_b.eGPOutCfg == AM_HAL_GPIO_PIN_OUTCFG_DISABLE) {
            if (cfg.GP.cfg_b.eGPInput == AM_HAL_GPIO_PIN_INPUT_ENABLE) {
                mode_qst = MP_QSTR_IN;
            }
        } else {
            mode_qst = pin_mode_qstr_table[cfg.GP.cfg_b.eGPOutCfg];
        }
    } else {
        mode_qst = MP_QSTR_ALT;
    }
    if (mode_qst != MP_QSTRnull) {
        mp_printf(print, ", mode=%q", mode_qst);
    }
    if (cfg.GP.cfg_b.ePullup != AM_HAL_GPIO_PIN_PULLUP_NONE) {
        mp_printf(print, ", pull=%q", pin_pull_qstr_table[cfg.GP.cfg_b.ePullup]);
    }
    if (cfg.GP.cfg_b.uFuncSel != 3) {
        mp_printf(print, ", alt=%u", cfg.GP.cfg_b.uFuncSel);
    }
    mp_printf(print, ")");
}

STATIC mp_obj_t machine_pin_obj_init_helper(const machine_pin_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    // Parse args.
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    // Set initial value (do this before configuring mode/pull).
    if (args[ARG_value].u_obj != mp_const_none) {
        if (mp_obj_is_true(args[ARG_value].u_obj)) {
            am_hal_gpio_output_set(self->id);
        } else {
            am_hal_gpio_output_clear(self->id);
        }
    }

    // Get current pin configuration.
    am_hal_gpio_pincfg_t cfg;
    am_hal_gpio_pinconfig_get(self->id, &cfg);

    // Configure mode.
    if (args[ARG_mode].u_obj != mp_const_none) {
        mp_int_t mode = mp_obj_get_int(args[ARG_mode].u_obj);
        if (mode == GPIO_MODE_IN) {
            cfg = (am_hal_gpio_pincfg_t)AMAP_PIN_PINCFG_INPUT;
        } else if (mode == GPIO_MODE_OUT) {
            cfg = (am_hal_gpio_pincfg_t)AMAP_PIN_PINCFG_OUTPUT;
        } else if (mode == GPIO_MODE_OPEN_DRAIN) {
            cfg = (am_hal_gpio_pincfg_t)AMAP_PIN_PINCFG_OPENDRAIN;
        } else if (mode == GPIO_MODE_TRISTATE) {
            cfg = (am_hal_gpio_pincfg_t)AMAP_PIN_PINCFG_TRISTATE;
        } else {
            // Alternate function.
            // TODO
            //gpio_set_function(self->id, args[ARG_alt].u_int);
        }
    }

    // Configure pull (unconditionally because None means no-pull).
    uint32_t pull = AM_HAL_GPIO_PIN_PULLUP_NONE;
    if (args[ARG_pull].u_obj != mp_const_none) {
        pull = mp_obj_get_int(args[ARG_pull].u_obj);
    }
    cfg.GP.cfg_b.ePullup = pull;

    // Set new pin configuration.
    am_hal_gpio_pinconfig(self->id, cfg);

    return mp_const_none;
}

STATIC mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 0, 1, false);
    machine_pin_obj_t *self = self_in;
    if (n_args == 0) {
        // Get pin.
        return MP_OBJ_NEW_SMALL_INT(am_hal_gpio_input_read(self->id));
    } else {
        // Set pin.
        bool value = mp_obj_is_true(args[0]);
        if (value) {
            am_hal_gpio_output_set(self->id);
        } else {
            am_hal_gpio_output_clear(self->id);
        }
        return mp_const_none;
    }
}

STATIC mp_obj_t machine_pin_low(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    am_hal_gpio_output_clear(self->id);
    return mp_const_none;
}

STATIC mp_obj_t machine_pin_high(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    am_hal_gpio_output_set(self->id);
    return mp_const_none;
}

STATIC mp_obj_t machine_pin_toggle(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    am_hal_gpio_output_toggle(self->id);
    return mp_const_none;
}

STATIC mp_uint_t pin_ioctl(mp_obj_t self_in, mp_uint_t request, uintptr_t arg, int *errcode) {
    (void)errcode;
    machine_pin_obj_t *self = self_in;
    switch (request) {
        case MP_PIN_READ: {
            return am_hal_gpio_input_read(self->id);
        }
        case MP_PIN_WRITE: {
            if (arg) {
                am_hal_gpio_output_set(self->id);
            } else {
                am_hal_gpio_output_clear(self->id);
            }
            return 0;
        }
    }
    return -1;
}
